update index.html and styles/index.css

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   <main>
     <header class="header-container">
       <button id="header-logo-icon"></button>
-      <button id="navbar-closed-x-icon"></button>
       <button id="navbar-opened-hamburger-icon"></button>
-        <div class="navbar-container">
+        <dialog class="navbar-modal">
           <div class="navbar-item-container">
+            <button id="navbar-closed-x-icon"></button>
             <button id="navbar-home">Home</button>
             <button id="navbar-new">New</button>
             <button id="navbar-popular">Popular</button>
             <button id="navbar-trending">Trending</button>
             <button id="navbar-categories">Categories</button>
           </div>
-        </div>
+        </dialog>
       </header>
 
 
