update index.html, scripts/index.js and styles/index.css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="main-container">
 
       <div class="cover-image-container">
-        <image id="image-web-3-mobile" src="/assets/images/image-web-3-mobile.jpg" alt="mobile cover image" width="100%" height="100%"></image>
+        <image id="image-web-3-mobile" src="./assets/images/image-web-3-mobile.jpg" alt="mobile cover image" width="100%" height="100%"></image>
       </div>
       
       <h1 id="title">The Bright Future of Web 3.0?</h1>
@@ -63,7 +63,7 @@
       <div class="external-article-container">
 
         <div class="gallery-container">
-          <img class="gallery-image" src="/assets/images/image-retro-pcs.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-retro-pcs.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
           <div class="inner-content">
           <p class="gallery-title">01</p>
           <p class="gallery-content">Reviving Retro PCs</p>
@@ -72,7 +72,7 @@
         </div>
   
         <div class="gallery-container">
-          <img class="gallery-image" src="/assets/images/image-top-laptops.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-top-laptops.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
           <div class="inner-content">
           <p class="gallery-title">02</p>
           <p class="gallery-content">Top 10 Laptops of 2022</p>
@@ -81,7 +81,7 @@
         </div>
   
         <div class="gallery-container">
-          <img class="gallery-image" src="/assets/images/image-gaming-growth.jpg" alt="image-gaming-growth" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth" width="25%" height="25%"></img>
           <div class="inner-content">
           <p class="gallery-title">03</p>
           <p class="gallery-content">The Growth of Gaming</p>
