update index.html, scripts/index.js and styles/index.css main work on desktop resolution started

--- a/index.html
+++ b/index.html
@@ -19,22 +19,25 @@
     <header class="header-container">
       <button id="header-logo-icon"></button>
       <button id="navbar-opened-hamburger-icon"></button>
-        <dialog class="navbar-modal">
-          <div class="navbar-item-container">
-            <button id="navbar-closed-x-icon"></button>
-            <button id="navbar-home">Home</button>
-            <button id="navbar-new">New</button>
-            <button id="navbar-popular">Popular</button>
-            <button id="navbar-trending">Trending</button>
-            <button id="navbar-categories">Categories</button>
-          </div>
-        </dialog>
     </header>
+
+    <dialog class="navbar-modal">
+      <ul class="navbar-item-container">
+        <li id="navbar-closed-x-icon"></li>
+        <li id="navbar-home">Home</li>
+        <li id="navbar-new">New</li>
+        <li id="navbar-popular">Popular</li>
+        <li id="navbar-trending">Trending</li>
+        <li id="navbar-categories">Categories</li>
+      </ul>
+    </dialog>
+   
 
     <div class="main-container">
 
       <div class="cover-image-container">
         <image id="image-web-3-mobile" src="./assets/images/image-web-3-mobile.jpg" alt="mobile cover image" width="100%" height="100%"></image>
+        <image id="image-web-3-desktop" src="./assets/images/image-web-3-desktop.jpg" alt="desktop cover image" width="100%" height="100%"></image>
       </div>
       
       <h1 id="title">The Bright Future of Web 3.0?</h1>
@@ -62,7 +65,7 @@
       <div class="external-article-container">
 
         <div class="gallery-container">
-          <img class="gallery-image" src="./assets/images/image-retro-pcs.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-retro-pcs.jpg" alt="image-retro-pcs"></img>
           <div class="inner-content">
           <p class="gallery-title">01</p>
           <p class="gallery-content">Reviving Retro PCs</p>
@@ -71,7 +74,7 @@
         </div>
   
         <div class="gallery-container">
-          <img class="gallery-image" src="./assets/images/image-top-laptops.jpg" alt="image-top-laptops" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-top-laptops.jpg" alt="image-top-laptops"></img>
           <div class="inner-content">
           <p class="gallery-title">02</p>
           <p class="gallery-content">Top 10 Laptops of 2022</p>
@@ -80,7 +83,7 @@
         </div>
   
         <div class="gallery-container">
-          <img class="gallery-image" src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth" width="25%" height="25%"></img>
+          <img class="gallery-image" src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth"></img>
           <div class="inner-content">
           <p class="gallery-title">03</p>
           <p class="gallery-content">The Growth of Gaming</p>
