update index.html Added accessibility improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     
     <header class="header-container">
-      <button id="header-logo-icon"></button>
+      <button id="header-logo-icon" aria-label="header-icon" ></button>
       <button id="mobile-navbar-opened-hamburger-icon"></button>
 
     <!-- mobile header and modal -->
@@ -52,8 +52,8 @@
     <div class="main-container">
 
       <div class="cover-image-container">
-        <image id="image-web-3-mobile" src="./assets/images/image-web-3-mobile.jpg" alt="mobile cover image" width="100%" height="100%"></image>
-        <image id="image-web-3-desktop" src="./assets/images/image-web-3-desktop.jpg" alt="desktop cover image" width="100%" height="100%"></image>
+        <image id="image-web-3-mobile" src="./assets/images/image-web-3-mobile.jpg" alt="mobile cover image"></image>
+        <image id="image-web-3-desktop" src="./assets/images/image-web-3-desktop.jpg" alt="desktop cover image"></image>
       </div>
       
       <h1 id="title">The Bright Future of Web 3.0?</h1>
